# ZephyMail

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile
docs/: CodeStyleGuide.md
src/: main.cpp
src/headers/: AESCredentialManager.hpp  EmailAccount.hpp  EmailConfigurationProvider.hpp  EmailCredential.hpp  EmailUser.hpp  ICredentialManager.hpp  ZephyClient.hpp
src/sources/: ZephyClient.cpp
